<?xml version="1.0"?>
<package>
  <name>tm_cab</name>
  <version>0.0.1</version>
  <description>The tm_cab package</description>

  <maintainer email="claus.smitt@gmail.com">l_vis</maintainer>
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/tm_cab</url> -->

  <author email="claus.smitt@gmail.com">l_vise</author>

  <buildtool_depend>catkin</buildtool_depend>
  
<!-- build deps -->


  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>message_generation</build_depend>
    <build_depend>boost</build_depend>
  
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>

  <build_depend>cmake_modules</build_depend>

  <!-- run deps -->
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>boost</run_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>

</package>